pubsub client/force-app/main/default/objects/Einstein_Chat_Request__e/Einstein_Chat_Request__e.object-meta.xml
<CustomObject>
    <label>Einstein Chat Request</label>
    <pluralLabel>Einstein Chat Requests</pluralLabel>
</CustomObject>