pubsub client/force-app/main/default/objects/Einstein_Chat_Request__e/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Chat mode: "chat" for general LLM, "agents" for multi-agent orchestration.</description>
    <label>Mode</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>