pubsub client/force-app/main/default/objects/Einstein_Chat_Request__e/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>API name of the record's SObject (e.g. "Opportunity"), when on a record page. Lets the subscriber tailor responses to the record context.</description>
    <label>Object Api Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>