pubsub client/force-app/main/default/objects/Einstein_Chat_Request__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>ID of the record the chat is running on, when placed on a record page. Null on home/app pages.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>