pubsub client/force-app/main/default/objects/Einstein_Chat_Request__e/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <description>The user's message for this turn.</description>
    <label>User Message</label>
    <length>32000</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>